--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_cs.properties
@@ -1,7 +1,10 @@
 check-token=Podívejte se na obrázek Token (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=Maximální velikost souboru (Automatic Translation)
 maximum-height=Maximální výška (Automatic Translation)
 maximum-width=Maximální šířka (Automatic Translation)
+organizations-types=Typy organizací (Automatic Translation)
+organizations-types-configuration-name=Typy organizací (Automatic Translation)
+organizations-types-help=Nastavte tento objekt JSON změnit typy organizací. Přidáte novou vlastnost k objektu JSON k vytvoření nového typu organizace. (Automatic Translation)
 use-initials-for-default-user-portrait=Pro výchozího uživatele portrét použít iniciály (Automatic Translation)
 use-initials-for-default-user-portrait-help=Nastavte na hodnotu true, použít iniciály uživatele jako výchozí výšku uživatele. Jinak bude použit výchozí výšku obrazové soubory. Výchozí cestu k obrazu na výšku lze nastavit pomocí vlastnosti "image.default.user.male.portrait" a "image.default.user.female.portrait" v portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Obrázky uživatelů (Automatic Translation)
