--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_fa.properties
@@ -1,7 +1,10 @@
 check-token=بررسی نشانه های تصویر (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=حداکثر اندازه فایل (Automatic Translation)
 maximum-height=حداکثر ارتفاع (Automatic Translation)
 maximum-width=حداکثر عرض (Automatic Translation)
+organizations-types=انواع سازمان ها (Automatic Translation)
+organizations-types-configuration-name=انواع سازمان ها (Automatic Translation)
+organizations-types-help=مجموعه این جسم JSON به انواع سازمان ها را تغییر دهید. املاک جدید به جسم JSON برای ایجاد نوع سازمان جدید اضافه کنید. (Automatic Translation)
 use-initials-for-default-user-portrait=استفاده از حروف اول اسم برای پرتره کاربر پیش فرض (Automatic Translation)
 use-initials-for-default-user-portrait-help=این درست به استفاده از حروف اول اسم کاربر را به عنوان پرتره کاربر پیش فرض تنظیم کنید. در غیر این صورت، فایل های عکس پرتره پیش فرض استفاده خواهد شد. مسیر تصویر پرتره پیش فرض را می توان از طریق ویژگی های "image.default.user.male.portrait" و "image.default.user.female.portrait" در portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=تصاویر کاربر (Automatic Translation)
