--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_pl.properties
@@ -1,7 +1,10 @@
 check-token=Sprawdź obraz Token (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=Maksymalny rozmiar pliku (Automatic Translation)
 maximum-height=Maksymalna wysokość (Automatic Translation)
 maximum-width=Maksymalna szerokość (Automatic Translation)
+organizations-types=Typy organizacji (Automatic Translation)
+organizations-types-configuration-name=Typy organizacji (Automatic Translation)
+organizations-types-help=Zestaw ten obiekt JSON, aby zmienić typy organizacji. Dodać nową właściwość, aby obiekt JSON, aby utworzyć nowy typ organizacji. (Automatic Translation)
 use-initials-for-default-user-portrait=Użyć inicjałów dla domyślnego użytkownika portret (Automatic Translation)
 use-initials-for-default-user-portrait-help=Set to true obsłudze inicjały użytkownika jako portret użytkownika domyślnego. W przeciwnym razie będą używane domyślne pliki obrazu portret. Domyślna ścieżka obrazu portret można ustawić za pomocą właściwości "image.default.user.male.portrait" i "image.default.user.female.portrait" w portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Zdjęcia użytkownika (Automatic Translation)
