--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_th.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_th.properties
@@ -1,7 +1,10 @@
 check-token=ตรวจสอบโทเค็นภาพ (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=ขนาดแฟ้มสูงสุด (Automatic Translation)
 maximum-height=ความสูงสูงสุด (Automatic Translation)
 maximum-width=ความกว้างสูงสุด (Automatic Translation)
+organizations-types=ประเภทองค์กร (Automatic Translation)
+organizations-types-configuration-name=ประเภทองค์กร (Automatic Translation)
+organizations-types-help=ตั้งค่าวัตถุ JSON นี้เพื่อเปลี่ยนชนิดองค์กร เพิ่มคุณสมบัติใหม่วัตถุ JSON ไปสร้างองค์กรชนิดใหม่ (Automatic Translation)
 use-initials-for-default-user-portrait=ใช้ชื่อย่อสำหรับภาพผู้ใช้เริ่มต้น (Automatic Translation)
 use-initials-for-default-user-portrait-help=ตั้งค่านี้เป็นจริงจะใช้ชื่อย่อของผู้ใช้เป็นภาพผู้ใช้เริ่มต้น มิฉะนั้น จะใช้ไฟล์รูปภาพเริ่มต้น สามารถกำหนดเส้นทางเริ่มต้นรูปภาพผ่านคุณสมบัติ "image.default.user.male.portrait" และ "image.default.user.female.portrait" ใน portal.properties (Automatic Translation)
 user-file-uploads-configuration-name=ภาพผู้ใช้ (Automatic Translation)
