--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_zh_TW.properties
@@ -1,7 +1,10 @@
 check-token=檢查圖像標記 (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=最大檔案大小 (Automatic Translation)
 maximum-height=最大高度 (Automatic Translation)
 maximum-width=最大寬度 (Automatic Translation)
+organizations-types=組織類型 (Automatic Translation)
+organizations-types-configuration-name=組織類型 (Automatic Translation)
+organizations-types-help=設置此 JSON 物件以更改組織類型。向 JSON 物件添加新屬性以創建新的組織類型。 (Automatic Translation)
 use-initials-for-default-user-portrait=預設使用者肖像使用首字母縮寫 (Automatic Translation)
 use-initials-for-default-user-portrait-help=設置為 true，使用者的縮寫用作預設使用者畫像。否則，將使用預設的肖像影像檔。可以通過屬性"image.default.user.male.portrait"和"image.default.user.female.portrait"在 portal.properties 中的設置預設肖像圖像路徑。 (Automatic Translation)
 user-file-uploads-configuration-name=使用者圖片 (Automatic Translation)
