--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ar.properties
@@ -1,7 +1,10 @@
 check-token=التحقق من الرمز المميز للصورة (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=أقصى حجم للملف (Automatic Translation)
 maximum-height=الحد الأقصى للارتفاع (Automatic Translation)
 maximum-width=الحد الأقصى للعرض (Automatic Translation)
+organizations-types=أنواع المنظمات (Automatic Translation)
+organizations-types-configuration-name=أنواع المنظمات (Automatic Translation)
+organizations-types-help=تعيين كائن JSON هذا لتغيير أنواع المنظمات. إضافة خاصية جديدة إلى كائن JSON لإنشاء نوع جديد من منظمة. (Automatic Translation)
 use-initials-for-default-user-portrait=استخدام الأحرف الاستهلالية لصورة المستخدم الافتراضي (Automatic Translation)
 use-initials-for-default-user-portrait-help=قم بتعيين هذا إلى true لاستخدام الأحرف الأولى من اسم المستخدم كصورة المستخدم الافتراضي. وبخلاف ذلك، سيتم استخدام ملفات الصور صورة افتراضية. يمكن تعيين المسار الافتراضي للصورة صورة عن طريق الخصائص "image.default.user.male.portrait" و "image.default.user.female.portrait" في portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=صور المستخدم (Automatic Translation)
