--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_et.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_et.properties
@@ -1,7 +1,10 @@
 check-token=Luba sisse pilt (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=Maksimaalne faili maht (Automatic Translation)
 maximum-height=Maksimaalne kõrgus (Automatic Translation)
 maximum-width=Suurim laius (Automatic Translation)
+organizations-types=Organisatsioonide tüübid (Automatic Translation)
+organizations-types-configuration-name=Organisatsioonide tüübid (Automatic Translation)
+organizations-types-help=Määra see JSON objekt organisatsioonide muutmiseks. Uue atribuudi lisamine JSON objekt uue organisatsiooni tüüp. (Automatic Translation)
 use-initials-for-default-user-portrait=Kasutage tähtedest vaikimisi kasutaja portree (Automatic Translation)
 use-initials-for-default-user-portrait-help=Määra see õige kasutada kasutaja initsiaalid vaikimisi kasutaja portree. Muul juhul kasutab vaikimisi portree pildifaile. Portree pildi vaiketee saab määrata atribuudid "image.default.user.male.portrait" ja "image.default.user.female.portrait" portal.properties kaudu. (Automatic Translation)
 user-file-uploads-configuration-name=Kasutajate pildid (Automatic Translation)
