--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_fr.properties
@@ -1,7 +1,10 @@
 check-token=Vérifier le jeton de l’Image (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=Taille de fichier maximale (Automatic Translation)
 maximum-height=Hauteur maximale (Automatic Translation)
 maximum-width=Largeur hors tout (Automatic Translation)
+organizations-types=Types d’organisations (Automatic Translation)
+organizations-types-configuration-name=Types d’organisations (Automatic Translation)
+organizations-types-help=Définir cet objet JSON pour modifier les types d’organisations. Ajouter une nouvelle propriété à l’objet JSON pour créer un nouveau type d’organisation. (Automatic Translation)
 use-initials-for-default-user-portrait=Utiliser des initiales pour Portrait d’utilisateur par défaut (Automatic Translation)
 use-initials-for-default-user-portrait-help=Affecter la valeur true pour utiliser les initiales de l’utilisateur comme le portrait d’utilisateur par défaut. Sinon, les fichiers d’image de portrait par défaut seront utilisées. Le chemin par défaut de l’image portrait peut être réglé via les propriétés « image.default.user.male.portrait » et « image.default.user.female.portrait » dans portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Images des utilisateurs (Automatic Translation)
