--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_hi_IN.properties
@@ -1,7 +1,10 @@
 check-token=छवि टोकन की जाँच करें (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=अधिकतम फ़ाइल आकार (Automatic Translation)
 maximum-height=अधिकतम ऊँचाई (Automatic Translation)
 maximum-width=अधिकतम चौड़ाई (Automatic Translation)
+organizations-types=संगठन प्रकार (Automatic Translation)
+organizations-types-configuration-name=संगठन प्रकार (Automatic Translation)
+organizations-types-help=इस JSON ऑब्जेक्ट संगठनों प्रकार को बदलने के लिए सेट करें । एक नया संगठन प्रकार बनाने के लिए JSON ऑब्जेक्ट के लिए एक नया गुण जोड़ें । (Automatic Translation)
 use-initials-for-default-user-portrait=पहले अक्षर के लिए डिफ़ॉल्ट उपयोगकर्ता चित्र का उपयोग करें (Automatic Translation)
 use-initials-for-default-user-portrait-help=यह डिफ़ॉल्ट उपयोगकर्ता चित्र के रूप में उपयोगकर्ता के प्रथमाक्षर का उपयोग करने के लिए true पर सेट करें। अन्यथा, डिफ़ॉल्ट पोर्ट्रेट छवि फ़ाइलें इस्तेमाल किया जाएगा। डिफ़ॉल्ट चित्र छवि पथ गुण "image.default.user.male.portrait" और "image.default.user.female.portrait" में portal.properties के माध्यम से सेट किया जा सकता। (Automatic Translation)
 user-file-uploads-configuration-name=उपयोगकर्ता चित्र (Automatic Translation)
