--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_in.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_in.properties
@@ -1,7 +1,10 @@
 check-token=Periksa gambar Token (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=Ukuran berkas maksimum (Automatic Translation)
 maximum-height=Ketinggian maksimum (Automatic Translation)
 maximum-width=Lebar maksimum (Automatic Translation)
+organizations-types=Jenis organisasi (Automatic Translation)
+organizations-types-configuration-name=Jenis organisasi (Automatic Translation)
+organizations-types-help=Mengatur objek JSON ini untuk mengubah jenis organisasi. Menambah sebuah properti baru ke objek JSON untuk membuat jenis organisasi baru. (Automatic Translation)
 use-initials-for-default-user-portrait=Menggunakan inisial untuk Default User potret (Automatic Translation)
 use-initials-for-default-user-portrait-help=Mengatur hal ini untuk benar menggunakan inisial pengguna sebagai potret pengguna default. Jika tidak, file gambar potret default akan digunakan. Gambar potret default path dapat diatur melalui properti "image.default.user.male.portrait" dan "image.default.user.female.portrait" dalam portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Gambar pengguna (Automatic Translation)
