--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_iw.properties
@@ -1,7 +1,10 @@
 check-token=תראה את התמונה אסימון (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=גודל הקובץ המרבי (Automatic Translation)
 maximum-height=גובה מקסימלי (Automatic Translation)
 maximum-width=רוחב מרבי (Automatic Translation)
+organizations-types=סוגי ארגונים (Automatic Translation)
+organizations-types-configuration-name=סוגי ארגונים (Automatic Translation)
+organizations-types-help=הגדר את אובייקט JSON זה כדי לשנות את סוגי ארגונים. להוסיף מאפיין חדש האובייקט JSON כדי ליצור סוג חדש של הארגון. (Automatic Translation)
 use-initials-for-default-user-portrait=להשתמש בראשי התיבות עבור דיוקן המשתמש המהווה ברירת מחדל (Automatic Translation)
 use-initials-for-default-user-portrait-help=להגדיר ל- true שתשמש את הדיוקן משתמש ברירת המחדל של ראשי התיבות של המשתמש. אחרת, ישמש את קובצי התמונה דיוקן של ברירת המחדל. ניתן להגדיר את נתיב ברירת המחדל של תמונת דיוקן דרך מאפייני "image.default.user.male.portrait" "image.default.user.female.portrait" ב portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=תמונות משתמש (Automatic Translation)
