--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_pt_PT.properties
@@ -2,6 +2,9 @@ check-token=Token de imagem de cheque (Automatic Translation)
 maximum-file-size=Maximum File Size (Automatic Copy)
 maximum-height=Altura máxima (Automatic Translation)
 maximum-width=Largura máxima (Automatic Translation)
+organizations-types=Organizations Types (Automatic Copy)
+organizations-types-configuration-name=Organizations Types (Automatic Copy)
+organizations-types-help=Set this JSON object to change the organizations types. Add a new property to the JSON object to create a new organization type. (Automatic Copy)
 use-initials-for-default-user-portrait=Use as iniciais para retrato de usuário padrão (Automatic Translation)
 use-initials-for-default-user-portrait-help=Defina como true para usar as iniciais do usuário como o retrato de usuário padrão. Caso contrário, os arquivos de imagem de retrato padrão serão usados. O caminho de imagem de retrato padrão pode ser definido através das propriedades "image.default.user.male.portrait" e "image.default.user.female.portrait" em portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Imagens de usuário (Automatic Translation)
