--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_vi.properties
@@ -1,7 +1,10 @@
 check-token=Kiểm tra hình ảnh Token (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=Kích thước tối đa (Automatic Translation)
 maximum-height=Chiều cao tối đa (Automatic Translation)
 maximum-width=Chiều rộng tối đa (Automatic Translation)
+organizations-types=Các loại tổ chức (Automatic Translation)
+organizations-types-configuration-name=Các loại tổ chức (Automatic Translation)
+organizations-types-help=Thiết lập này đối tượng JSON để thay đổi các loại tổ chức. Thêm một tài sản mới cho đối tượng JSON để tạo ra một loại hình tổ chức mới. (Automatic Translation)
 use-initials-for-default-user-portrait=Sử dụng tên viết tắt cho bức chân dung người dùng mặc định (Automatic Translation)
 use-initials-for-default-user-portrait-help=Thiết lập này đúng để sử dụng chữ cái đầu của người dùng như chân dung người dùng mặc định. Nếu không, tập tin hình ảnh chân dung của mặc định sẽ được sử dụng. Đường dẫn mặc định hình ảnh chân dung có thể được đặt thông qua thuộc tính "image.default.user.male.portrait" và "image.default.user.female.portrait" tại portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Hình ảnh người dùng (Automatic Translation)
