--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_zh_CN.properties
@@ -1,7 +1,10 @@
 check-token=检查图像标记 (Automatic Translation)
-maximum-file-size=Maximum File Size (Automatic Copy)
+maximum-file-size=最大文件大小 (Automatic Translation)
 maximum-height=最大高度 (Automatic Translation)
 maximum-width=最大宽度 (Automatic Translation)
+organizations-types=组织类型 (Automatic Translation)
+organizations-types-configuration-name=组织类型 (Automatic Translation)
+organizations-types-help=设置此 JSON 对象以更改组织类型。向 JSON 对象添加新属性以创建新的组织类型。 (Automatic Translation)
 use-initials-for-default-user-portrait=默认用户肖像使用首字母缩写 (Automatic Translation)
 use-initials-for-default-user-portrait-help=设置为 true，用户的缩写用作默认用户画像。否则，将使用默认的肖像图像文件。可以通过属性"image.default.user.male.portrait"和"image.default.user.female.portrait"在 portal.properties 中的设置默认肖像图像路径。 (Automatic Translation)
 user-file-uploads-configuration-name=用户图片 (Automatic Translation)
