--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ca.properties
@@ -1,10 +1,13 @@
 check-token=Fitxa de comprovació imatge (Automatic Translation)
+children-types=Tipus de nens (Automatic Translation)
+country-enabled=País habilitat (Automatic Translation)
+country-required=País requereix (Automatic Translation)
 maximum-file-size=Mida màxima del fitxer (Automatic Translation)
 maximum-height=Alçada màxima (Automatic Translation)
 maximum-width=Amplada màxima (Automatic Translation)
-organizations-types=Tipus d'organitzacions (Automatic Translation)
-organizations-types-configuration-name=Tipus d'organitzacions (Automatic Translation)
+organization-type-configuration-name=Tipus d'organització (Automatic Translation)
 organizations-types-help=Posar aquest objecte JSON per canviar els tipus d'organitzacions. Afegir un nou establiment a l'objecte JSON per crear un nou tipus d'organització. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Ús inicials per a Retrat d'usuari per defecte (Automatic Translation)
 use-initials-for-default-user-portrait-help=Estableix a cert per utilitzar inicials de l'usuari com el retrat de l'usuari per defecte. En cas contrari, els arxius d'imatge de retrat per defecte s'utilitzarà. El camí d'omissió retrat imatge es pot establir mitjançant les propietats "image.default.user.male.portrait" i "image.default.user.female.portrait" en portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Imatges de l'usuari (Automatic Translation)
