--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_el.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_el.properties
@@ -1,10 +1,13 @@
 check-token=Ελέγξτε το διακριτικό εικόνας (Automatic Translation)
+children-types=Τύποι παιδιών (Automatic Translation)
+country-enabled=Χώρα ενεργοποιημένη (Automatic Translation)
+country-required=Απαιτείται χώρα (Automatic Translation)
 maximum-file-size=Μέγιστο μέγεθος αρχείου (Automatic Translation)
 maximum-height=Μέγιστο ύψος (Automatic Translation)
 maximum-width=Μέγιστο πλάτος (Automatic Translation)
-organizations-types=Τύποι οργανισμών (Automatic Translation)
-organizations-types-configuration-name=Τύποι οργανισμών (Automatic Translation)
+organization-type-configuration-name=Ο τύπος του οργανισμού (Automatic Translation)
 organizations-types-help=Για να ορίσετε αυτό το αντικείμενο JSON να αλλάξετε τους τύπους των οργανισμών. Για να προσθέσετε μια νέα ιδιότητα στο αντικείμενο JSON να δημιουργήσει ένα νέο είδος οργανισμού. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Χρησιμοποιήστε τα αρχικά για το προεπιλεγμένο χρήστη πορτρέτο (Automatic Translation)
 use-initials-for-default-user-portrait-help=Ορίστε αυτό σε true, για να χρησιμοποιήσετε τα αρχικά του χρήστη ως το προεπιλεγμένο χρήστη πορτρέτο. Διαφορετικά, θα χρησιμοποιούνται τα προεπιλεγμένα αρχεία εικόνας πορτρέτου. Η προεπιλεγμένη διαδρομή εικόνας πορτρέτου μπορεί να οριστεί μέσω τις ιδιότητες «image.default.user.male.portrait» και «image.default.user.female.portrait» στο portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Εικόνες χρήστη (Automatic Translation)
