--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_es.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_es.properties
@@ -1,10 +1,13 @@
 check-token=Ver ficha de imagen (Automatic Translation)
+children-types=Tipos de niños (Automatic Translation)
+country-enabled=País habilitado (Automatic Translation)
+country-required=País requerido (Automatic Translation)
 maximum-file-size=Tamaño máximo de archivo (Automatic Translation)
 maximum-height=Altura máxima (Automatic Translation)
 maximum-width=Anchura máxima (Automatic Translation)
-organizations-types=Tipos de organizaciones (Automatic Translation)
-organizations-types-configuration-name=Tipos de organizaciones (Automatic Translation)
+organization-type-configuration-name=Tipo de organización (Automatic Translation)
 organizations-types-help=Establece este objeto JSON para cambiar los tipos de organizaciones. Agregar una nueva propiedad para el objeto JSON para crear un nuevo tipo de organización. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Utilizar iniciales para Retrato de usuario por defecto (Automatic Translation)
 use-initials-for-default-user-portrait-help=Establézcalo en true para utilizar las iniciales del usuario como el retrato de usuario por defecto. De lo contrario, se utilizará los archivos de imagen de retrato por defecto. La ruta de imagen de retrato por defecto se puede definir mediante las propiedades "image.default.user.male.portrait" y "image.default.user.female.portrait" en portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Imágenes de usuario (Automatic Translation)
