--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_hu.properties
@@ -1,10 +1,13 @@
 check-token=Ellenőriz kép Token (Automatic Translation)
+children-types=Gyermekek típusok (Automatic Translation)
+country-enabled=Országot, engedélyezve (Automatic Translation)
+country-required=Ország szükséges (Automatic Translation)
 maximum-file-size=Maximális fájlméret (Automatic Translation)
 maximum-height=Maximális magasság (Automatic Translation)
 maximum-width=Maximális szélesség (Automatic Translation)
-organizations-types=Szervezetek típusai (Automatic Translation)
-organizations-types-configuration-name=Szervezetek típusai (Automatic Translation)
+organization-type-configuration-name=Szervezet típusa (Automatic Translation)
 organizations-types-help=Állítsa be a JSON objektumot változtatni szervezet típusok. Új tulajdonság felvétele a JSON objektumot létrehozni egy új szervezet. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Monogram használandó alapértelmezett felhasználói portré (Automatic Translation)
 use-initials-for-default-user-portrait-help=Készlet ez-hoz igaz, hogy a felhasználó monogramját használja az alapértelmezett felhasználói portré. Ellenkező esetben az alapértelmezett portré kép fájlokat fogja használni. Az alapértelmezett portré kép elérési útja a Tulajdonságok "image.default.user.male.portrait" és a "image.default.user.female.portrait", a portal.properties keresztül állítható be. (Automatic Translation)
 user-file-uploads-configuration-name=Felhasználói képek (Automatic Translation)
