--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_lt.properties
@@ -1,10 +1,13 @@
 check-token=Patikrinkite vaizdo atpažinimo ženklas (Automatic Translation)
+children-types=Vaikų tipai (Automatic Translation)
+country-enabled=Šalyje leido (Automatic Translation)
+country-required=Šalį, reikalingas (Automatic Translation)
 maximum-file-size=Maksimalus failo dydis (Automatic Translation)
 maximum-height=Maksimalus aukštis (Automatic Translation)
 maximum-width=Didžiausias plotis (Automatic Translation)
-organizations-types=Organizacijų tipai (Automatic Translation)
-organizations-types-configuration-name=Organizacijų tipai (Automatic Translation)
+organization-type-configuration-name=Organizacijos tipas (Automatic Translation)
 organizations-types-help=Nustatyti šio objekto JSON keisti organizacijų tipus. Pridėti naują turtą JSON objektui sukurti naujo tipo organizacijos. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Santrumpų naudoti numatytąjį vartotojo portretas (Automatic Translation)
 use-initials-for-default-user-portrait-help=Nustatyti tai tiesa naudoti vartotojo inicialai kaip numatytąjį vartotojo portretas. Kitaip, bus naudojamas numatytasis portretas vaizdo failus. Numatytasis portretas vaizdas kelias gali būti nustatyta per apgyvendinimo įstaigos "image.default.user.male.portrait" ir "image.default.user.female.portrait" – portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Vartotojo atvaizdai (Automatic Translation)
