--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_nb.properties
@@ -1,10 +1,13 @@
 check-token=Sjekk bilde Token (Automatic Translation)
+children-types=Barn typer (Automatic Translation)
+country-enabled=Landet aktivert (Automatic Translation)
+country-required=Land kreves (Automatic Translation)
 maximum-file-size=Maksimal filstørrelse (Automatic Translation)
 maximum-height=Maksimal høyde (Automatic Translation)
 maximum-width=Maksimal bredde (Automatic Translation)
-organizations-types=Organisasjoner typer (Automatic Translation)
-organizations-types-configuration-name=Organisasjoner typer (Automatic Translation)
+organization-type-configuration-name=Organisasjonstypen (Automatic Translation)
 organizations-types-help=Angi denne JSON objekt endre organisasjoner. Legge til en ny egenskap i JSON-objektet til å opprette en ny organisasjon. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Bruk initialene For standard bruker stående (Automatic Translation)
 use-initials-for-default-user-portrait-help=Sette dette sant bruke brukerens forbokstaver som standard bruker portrettet. Ellers brukes standard portrett bildefilene. Standardbanen portrett bildet kan angis via egenskaper "image.default.user.male.portrait" og "image.default.user.female.portrait" i portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Bruker bilder (Automatic Translation)
