--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ro.properties
@@ -1,10 +1,13 @@
 check-token=Selectare imagine simbol (Automatic Translation)
+children-types=Tipuri de copii (Automatic Translation)
+country-enabled=Ţară activat (Automatic Translation)
+country-required=Ţară necesare (Automatic Translation)
 maximum-file-size=Mărimea maximă a fişierului (Automatic Translation)
 maximum-height=Înălţimea maximă (Automatic Translation)
 maximum-width=Lățimea maximă (Automatic Translation)
-organizations-types=Tipuri de organizaţii (Automatic Translation)
-organizations-types-configuration-name=Tipuri de organizaţii (Automatic Translation)
+organization-type-configuration-name=Tipul organizaţiei (Automatic Translation)
 organizations-types-help=Setaţi acest obiect JSON pentru a schimba tipurile de organizaţii. Adăugaţi o nouă proprietate obiect JSON pentru a crea un nou tip de organizaţie. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Utilizează iniţialele pentru portret de utilizator implicit (Automatic Translation)
 use-initials-for-default-user-portrait-help=Setezi la true să utilizaţi iniţialele utilizatorului ca portret de utilizator implicit. Altfel, se va utiliza implicit portret imagine dosar. Calea implicită portret ce pot fi setate prin intermediul proprietăților "image.default.user.male.portrait" şi "image.default.user.female.portrait" în portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Imaginile utilizatorilor (Automatic Translation)
