--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_sk.properties
@@ -1,10 +1,13 @@
 check-token=Skontrolujte, či Image Token (Automatic Translation)
+children-types=Deti typy (Automatic Translation)
+country-enabled=Krajine povolené (Automatic Translation)
+country-required=Krajina vyžaduje (Automatic Translation)
 maximum-file-size=Maximálna veľkosť súboru (Automatic Translation)
 maximum-height=Maximálna výška (Automatic Translation)
 maximum-width=Maximálna šírka (Automatic Translation)
-organizations-types=Typy organizácií (Automatic Translation)
-organizations-types-configuration-name=Typy organizácií (Automatic Translation)
+organization-type-configuration-name=Typ organizácie (Automatic Translation)
 organizations-types-help=Nastavenie tohto objektu JSON zmeniť typy organizácií. Pridať novú vlastnosť objektu JSON na vytvorenie novej organizácie typu. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Použitie skratiek pre predvolený používateľ portrét (Automatic Translation)
 use-initials-for-default-user-portrait-help=Nastavte na true použiť iniciály používateľa ako predvolený používateľ portrét. V opačnom prípade sa použije predvolené portrét obrazové súbory. Predvolená cesta pre obraz portrét možno nastaviť pomocou vlastností "image.default.user.male.portrait" a "image.default.user.female.portrait" v portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Užívateľ obrázky (Automatic Translation)
