--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_tr.properties
@@ -1,10 +1,13 @@
 check-token=Onay görüntü simgesi (Automatic Translation)
+children-types=Çocuk türleri (Automatic Translation)
+country-enabled=Etkin ülke (Automatic Translation)
+country-required=Gerekli ülke (Automatic Translation)
 maximum-file-size=En büyük dosya boyutu (Automatic Translation)
 maximum-height=Maksimum yükseklik (Automatic Translation)
 maximum-width=En fazla genişlik (Automatic Translation)
-organizations-types=Kuruluş türleri (Automatic Translation)
-organizations-types-configuration-name=Kuruluş türleri (Automatic Translation)
+organization-type-configuration-name=Organizasyon Türü (Automatic Translation)
 organizations-types-help=Kuruluşlar türlerini değiştirmek için bu JSON nesnesi ayarlayın. Yeni özellik yeni bir organizasyon türü oluşturmak için JSON nesnesini ekleyin. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Baş harfleri varsayılan kullanıcı portre için kullanın (Automatic Translation)
 use-initials-for-default-user-portrait-help=Bu kullanıcının adının baş harflerini varsayılan kullanıcı portre kullanmak için true olarak ayarlayın. Aksi durumda, varsayılan portre resim dosyaları kullanılacaktır. Varsayılan portre resim yolu özellikleri "image.default.user.male.portrait" ve "image.default.user.female.portrait" portal.properties üzerinden ayarlanabilir. (Automatic Translation)
 user-file-uploads-configuration-name=Kullanıcı resimleri (Automatic Translation)
