--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_uk.properties
@@ -1,10 +1,13 @@
 check-token=Перевірка зображення маркер (Automatic Translation)
+children-types=Типи дітей (Automatic Translation)
+country-enabled=Країна включений (Automatic Translation)
+country-required=Країні необхідні (Automatic Translation)
 maximum-file-size=Максимальний розмір файлу (Automatic Translation)
 maximum-height=Максимальна висота (Automatic Translation)
 maximum-width=Максимальна ширина (Automatic Translation)
-organizations-types=Типи організацій (Automatic Translation)
-organizations-types-configuration-name=Типи організацій (Automatic Translation)
+organization-type-configuration-name=Тип організації (Automatic Translation)
 organizations-types-help=Встановити цей об'єкт JSON, щоб змінити типи організацій. Додати нову властивість об'єкт JSON, щоб створити новий тип організації. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Використовувати ініціали, за замовчуванням користувачем портрет (Automatic Translation)
 use-initials-for-default-user-portrait-help=Встановити це вірно використовувати ініціали користувача як портрет користувача за промовчанням. В іншому випадку файли зображень портрет за замовчуванням буде використовуватися. За промовчанням шлях портрет зображення можна встановити за допомогою властивості "image.default.user.male.portrait" і "image.default.user.female.portrait" в portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Зображення користувача (Automatic Translation)
