--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_bg.properties
@@ -1,10 +1,13 @@
 check-token=Проверка на изображението маркер (Automatic Translation)
+children-types=Деца видове (Automatic Translation)
+country-enabled=Страната разрешено (Automatic Translation)
+country-required=Страната изисква (Automatic Translation)
 maximum-file-size=Максимален размер на файла (Automatic Translation)
 maximum-height=Максимална височина (Automatic Translation)
 maximum-width=Максимална ширина (Automatic Translation)
-organizations-types=Видове организации (Automatic Translation)
-organizations-types-configuration-name=Видове организации (Automatic Translation)
+organization-type-configuration-name=Тип на организацията (Automatic Translation)
 organizations-types-help=Задайте този JSON обект да промените типовете организации. Добавяне на ново свойство на обект JSON да създадете нов тип организация. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Използват инициалите за по подразбиране потребителя портрет (Automatic Translation)
 use-initials-for-default-user-portrait-help=Задайте това да е истина да използвате инициалите на потребителя като по подразбиране потребителя портрета. В противен случай ще се използва по подразбиране портрет файлове с изображения. Пътя по подразбиране портретно изображение може да се настрои чрез свойствата "image.default.user.male.portrait" и "image.default.user.female.portrait" в portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Потребителски снимки (Automatic Translation)
