--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_ru.properties
@@ -1,10 +1,13 @@
 check-token=Проверьте изображение маркера (Automatic Translation)
+children-types=Типы детей (Automatic Translation)
+country-enabled=Страна включена (Automatic Translation)
+country-required=Стране требуется (Automatic Translation)
 maximum-file-size=Максимальный размер файла (Automatic Translation)
 maximum-height=Максимальная высота (Automatic Translation)
 maximum-width=Максимальная ширина (Automatic Translation)
-organizations-types=Типы организаций (Automatic Translation)
-organizations-types-configuration-name=Типы организаций (Automatic Translation)
+organization-type-configuration-name=Тип Организации (Automatic Translation)
 organizations-types-help=Установите этот объект JSON, чтобы изменить типы организаций. Добавьте новое свойство в объекте JSON для создания нового типа организации. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Используйте инициалы для портрет пользователя по умолчанию (Automatic Translation)
 use-initials-for-default-user-portrait-help=Установите это значение true, чтобы использовать инициалы пользователя как портрет пользователя по умолчанию. В противном случае файлы изображений портрет по умолчанию будет использоваться. Портрет изображение путь по умолчанию можно задать через свойства «image.default.user.male.portrait» и «image.default.user.female.portrait» в portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Изображения пользователей (Automatic Translation)
