--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language_sl.properties
@@ -1,10 +1,13 @@
 check-token=Preverite sliko žeton (Automatic Translation)
+children-types=Otroci vrste (Automatic Translation)
+country-enabled=Države, omogočena (Automatic Translation)
+country-required=Države, ki zahteva (Automatic Translation)
 maximum-file-size=Največja velikost datoteke (Automatic Translation)
 maximum-height=Največja višina (Automatic Translation)
 maximum-width=Največja širina (Automatic Translation)
-organizations-types=Vrste organizacije (Automatic Translation)
-organizations-types-configuration-name=Vrste organizacije (Automatic Translation)
+organization-type-configuration-name=Organizacija vrste (Automatic Translation)
 organizations-types-help=Iz predmeta JSON spremeniti vrste organizacij. Dodajte novo lastnost predmeta JSON tvoriti nov tip organizacije. (Automatic Translation)
+rootable=Rootable (Automatic Translation)
 use-initials-for-default-user-portrait=Uporabite začetnice za privzetega uporabnika portret (Automatic Translation)
 use-initials-for-default-user-portrait-help=Nastavite to vrednost na true rabiti začetnice uporabnika kot privzeti uporabnik portret. Drugače, bo uporabljen privzeti portret slikovne datoteke. Privzeto portret podoba pot lahko nastavite preko lastnosti "image.default.user.male.portrait" in "image.default.user.female.portrait" v portal.properties. (Automatic Translation)
 user-file-uploads-configuration-name=Uporabnik slike (Automatic Translation)
