--- a/modules/apps/foundation/configuration-admin/configuration-admin-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/foundation/configuration-admin/configuration-admin-web/src/main/resources/content/Language_nl.properties
@@ -1,3 +1,56 @@
+category-set.commerce=Commerce (Automatic Copy)
+category-set.content-management=Content Management (Automatic Copy)
+category-set.other=Other (Automatic Copy)
+category-set.platform=Platform (Automatic Copy)
+category-set.security=Security (Automatic Copy)
+category-set.social=Social (Automatic Copy)
+category.adaptive-media=Adaptive Media (Automatic Copy)
+category.api-authentication=API Authentication (Automatic Copy)
+category.assets=Assets (Automatic Copy)
+category.auto-login=Auto Login (Automatic Copy)
+category.blogs=Blogs (Automatic Copy)
+category.breadcrumbs=Breadcrumbs (Automatic Copy)
+category.captcha=CAPTCHA (Automatic Copy)
+category.chat=Chat (Automatic Copy)
+category.connectors=Connectors (Automatic Copy)
+category.display-content=Display Content (Automatic Copy)
+category.documents-and-media=Documents and Media (Automatic Copy)
+category.dynamic-data-lists=Dynamic Data Lists (Automatic Copy)
+category.dynamic-data-mapping=Dynamic Data Mapping (Automatic Copy)
+category.file-storage=File Storage (Automatic Copy)
+category.forms=Forms (Automatic Copy)
+category.frontend-infrastructure=Frontend Infrastructure (Automatic Copy)
+category.general=General (Automatic Copy)
+category.infrastructure=Infrastructure (Automatic Copy)
+category.knowledge-base=Knowledge Base (Automatic Copy)
+category.ldap=LDAP (Automatic Copy)
+category.localization=Localization (Automatic Copy)
+category.messaging=Messaging (Automatic Copy)
+category.mobile-and-devices=Mobile and devices (Automatic Copy)
+category.module-container=Module Container (Automatic Copy)
+category.navigation=Navigation (Automatic Copy)
+category.open-id=OpenID (Automatic Copy)
+category.other=Other (Automatic Copy)
+category.page-administration=Page Administration (Automatic Copy)
+category.push-notifications=Push Notifications (Automatic Copy)
+category.rss=RSS (Automatic Copy)
+category.scripting-engines=Scripting Engines (Automatic Copy)
+category.search=Search (Automatic Copy)
+category.security=Security (Automatic Copy)
+category.shopping=Shopping (Automatic Copy)
+category.social-networks=Social Networks (Automatic Copy)
+category.sso=SSO (Automatic Copy)
+category.template-engines=Template Engines (Automatic Copy)
+category.third-party=Third Party (Automatic Copy)
+category.tools=Tools (Automatic Copy)
+category.upgrades=Upgrades (Automatic Copy)
+category.user-activity=User Activity (Automatic Copy)
+category.users=Users (Automatic Copy)
+category.web-api=Web API (Automatic Copy)
+category.web-content=Web Content (Automatic Copy)
+category.wiki=Wiki (Automatic Copy)
+category.workflow=Workflow (Automatic Copy)
+category.xsl-content=XSL Content (Automatic Copy)
 collaboration=Samenwerking
 configuration-entries=Configuratie-ingangen
 default-configuration-for-all-sites=Standaardconfiguratie voor alle sites
@@ -12,5 +65,9 @@ javax.portlet.title.com_liferay_configuration_admin_web_portlet_SystemSettingsPo
 no-configurations-were-found=Geen configuraties gevonden.
 no-entries-for-x-have-been-added-yet=Er zijn nog geen ingangen voor {0} toegevoegd. Gebruik de onderstaande "toevoegknop" om de eerste toe te voegen.
 reset-default-values=Standaardwaarden herstellen
+scope.company=Virtual Instance Scope (Automatic Copy)
+scope.group=Site Scope (Automatic Copy)
+scope.portlet-instance=Application Instances (Automatic Copy)
+scope.system=System Scope (Automatic Copy)
 this-configuration-was-not-saved-yet=De configuratie is nog niet opgeslagen. De getoonde waarden zijn de standaardwaarden.
 web-experience=Webervaring
